# goalweaver

./: .gitignore  .gw_run_code_demo.py  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
goalweaver/: __init__.py  agent.py  cli.py  goal_graph.py  memory.py  planner.py  runtime.py  tools.py  types.py
goalweaver/examples/: coding_team.py  research_team.py
goalweaver/llm/: base.py  local_stub.py
goalweaver/visualizer/: app.py
gw_code/: __init__.py  algos.py  utils.py
tests/: __init__.py  test_algos.py  test_goal_graph.py  test_planner_properties.py  test_utils.py
